--- a/metricbeat/docs/modules/googlecloud.asciidoc
+++ b/metricbeat/docs/modules/googlecloud.asciidoc
@@ -145,7 +145,7 @@ For example, if Compute Metricset fetches 14 metrics (which is the number of met
 
 [float]
 == Metricsets
-Currently, we have `compute`, `loadbalancing`, `pubsub`, `stackdriver` and
+Currently, we have `compute`, `loadbalancing`, `pubsub`, `metrics` and
 `storage` metricset in `googlecloud` module.
 
 [float]
@@ -196,10 +196,11 @@ The `pubsub` metricset comes with a predefined dashboard:
 image::./images/metricbeat-googlecloud-pubsub-overview.png[]
 
 [float]
-=== `stackdriver`
-Stackdriver provides visibility into the performance, uptime, and overall health
-of cloud-powered applications. It collects metrics, events, and metadata from
-different services from Google Cloud.
+=== `metrics`
+`metrics` metricset uses Google Cloud Operations/Stackdriver, which provides
+visibility into the performance, uptime, and overall health of cloud-powered
+applications. It collects metrics, events, and metadata from different services
+from Google Cloud.
 This metricset is to collect https://cloud.google.com/monitoring/api/metrics_gcp[monitoring metrics]
 from Google Cloud using `ListTimeSeries` API.
 
@@ -256,7 +257,7 @@ metricbeat.modules:
 
 - module: googlecloud
   metricsets:
-    - stackdriver
+    - metrics
   project_id: "your project id"
   credentials_file_path: "your JSON credentials file path"
   exclude_labels: false
@@ -280,9 +281,9 @@ The following metricsets are available:
 
 * <<metricbeat-metricset-googlecloud-loadbalancing,loadbalancing>>
 
-* <<metricbeat-metricset-googlecloud-pubsub,pubsub>>
+* <<metricbeat-metricset-googlecloud-metrics,metrics>>
 
-* <<metricbeat-metricset-googlecloud-stackdriver,stackdriver>>
+* <<metricbeat-metricset-googlecloud-pubsub,pubsub>>
 
 * <<metricbeat-metricset-googlecloud-storage,storage>>
 
@@ -290,9 +291,9 @@ include::googlecloud/compute.asciidoc[]
 
 include::googlecloud/loadbalancing.asciidoc[]
 
-include::googlecloud/pubsub.asciidoc[]
+include::googlecloud/metrics.asciidoc[]
 
-include::googlecloud/stackdriver.asciidoc[]
+include::googlecloud/pubsub.asciidoc[]
 
 include::googlecloud/storage.asciidoc[]
 
