--- a/libbeat/docs/release-notes/highlights/highlights-7.8.0.asciidoc
+++ b/libbeat/docs/release-notes/highlights/highlights-7.8.0.asciidoc
@@ -4,10 +4,10 @@
 <titleabbrev>7.8</titleabbrev>
 ++++
 
-Each release of {beats} brings new features and product improvements. 
+Each release of {beats} brings new features and product improvements.
 Following are the most notable features and enhancements in 7.8.
 
-For a complete list of related highlights, see the 
+For a complete list of related highlights, see the
 https://www.elastic.co/blog/elastic-observability-7-7-0-released[Observability 7.8 release blog].
 
 For a list of bug fixes and other changes, see the {beats}
@@ -25,7 +25,7 @@ For a list of bug fixes and other changes, see the {beats}
 
 In this release, we've added support for monitoring Google Cloud operations
 suite (formerly Stackdriver). The new
-{metricbeat-ref}/metricbeat-metricset-googlecloud-stackdriver.html[stackdriver]
+{metricbeat-ref}/metricbeat-metricset-googlecloud-metrics.html[metrics]
 metricset in the Google Cloud Platform module collects any service metrics from
 Google Cloud by using the `ListTimeSeries` API call.
 
